--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="padding_medium">8dp</dimen>
+    <dimen name="text_large">21sp</dimen>
+    <dimen name="height_edit_text">55dp</dimen>
+    <dimen name="padding">16dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="card_height">250dp</dimen>
+    <dimen name="text_x_large">35sp</dimen>
+    <dimen name="text_small">12sp</dimen>
+    <dimen name="notification">45dp</dimen>
 </resources>
