--- a/app/src/main/res/layout/item_headline_layout.xml
+++ b/app/src/main/res/layout/item_headline_layout.xml
@@ -7,6 +7,7 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        android:layout_marginEnd="@dimen/padding_medium"
         android:id="@+id/cardViewHeadline"
         app:cardCornerRadius="18dp"
         app:layout_constraintTop_toTopOf="parent"
