--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,7 @@
     <dimen name="text_x_large">35sp</dimen>
     <dimen name="text_small">12sp</dimen>
     <dimen name="notification">45dp</dimen>
+    <dimen name="detail_image_height">300dp</dimen>
+    <dimen name="chip_height">42dp</dimen>
+    <dimen name="chip_width">90dp</dimen>
 </resources>
