Search feature, detail UI changes and pagination for search

--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -10,10 +10,10 @@
         android:id="@+id/tvFilter"
         android:layout_width="@dimen/chip_width"
         android:layout_height="@dimen/chip_height"
-        android:background="@drawable/rounded_filter"
+        android:background="@drawable/rounded_filter_white"
         android:gravity="center"
         android:text="sample"
-        android:textColor="@color/white"
+        android:textColor="@color/text_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
