--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,67 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/padding">
 
-    <EditText
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/etSearchView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ivNotification"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_search"
+        app:iconifiedByDefault="false"
+        app:layout_constraintEnd_toStartOf="@id/ivNotification"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="@string/search" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/searchContainer"
+        android:layout_width="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/etSearchView"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toStartOf="@id/ivNotification"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:src="@drawable/ic_notification"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/ivNotification"
         android:layout_width="@dimen/notification"
-        android:layout_height="@dimen/notification"/>
+        android:layout_height="@dimen/notification"
+        android:src="@drawable/ic_notification"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:textStyle="bold"
         android:id="@+id/tvLatestNews"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textAlignment="textStart"
         android:text="@string/latest_news"
+        android:textAlignment="textStart"
+        android:textColor="@color/text_black"
         android:textSize="@dimen/text_large"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSearchView" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:padding="@dimen/padding"
-        app:layout_constraintTop_toBottomOf="@+id/tvLatestNews"
+        android:layout_marginTop="@dimen/padding_medium"
         android:id="@+id/rvTopHeadlines"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tvLatestNews" />
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="@dimen/padding"
+        android:layout_marginBottom="@dimen/padding"
         android:id="@+id/rvFilter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/rvTopHeadlines"
         app:layout_constraintBottom_toTopOf="@id/rvNewsList"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/rvTopHeadlines" />
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="@dimen/padding"
-        app:layout_constraintTop_toBottomOf="@+id/rvFilter"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/rvNewsList"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvFilter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
