--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -3,35 +3,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.detail.NewsDetailFragment">
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_news_icon"
-        android:id="@+id/ivNewsImage"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/detail_image_height"/>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        app:layout_constraintTop_toBottomOf="@id/ivNewsImage"
+        android:id="@+id/contentContainer"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="@color/grey_tint"
-            android:id="@+id/headerContainer"
+        <ImageView
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_news_icon"
+            android:id="@+id/ivNewsImage"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="@id/headerCenter"
+            android:layout_height="@dimen/detail_image_height"/>
+
+        <View
+            android:id="@+id/imageBottom"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:layout_constraintBottom_toBottomOf="@+id/ivNewsImage"/>
+
+        <View
+            android:id="@+id/headerCenter"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toBottomOf="@+id/ivNewsImage"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginBottom="@dimen/height_edit_text"
+            android:elevation="2dp"
+            android:background="@drawable/rounded_news_title"
+            android:id="@+id/headerContainer"
+            android:padding="@dimen/padding_medium"
+            app:layout_constraintTop_toTopOf="@id/headerCenter"
+            app:layout_constraintBottom_toBottomOf="@id/headerCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="@dimen/detail_image_height"
             android:layout_height="wrap_content">
             <TextView
+                android:textColor="@color/text_black"
+                android:textSize="@dimen/text_small"
                 app:layout_constraintEnd_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="Sunday, 9 May 2021"
@@ -41,17 +64,23 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:textStyle="bold"
+                android:textColor="@color/text_black"
+                android:textSize="@dimen/text_medium"
                 android:layout_marginTop="@dimen/padding"
                 android:gravity="center"
                 android:id="@+id/tvNewsTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Text text Text text Text text"
+                app:layout_constraintBottom_toTopOf="@id/tvPublishedBy"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvDates"/>
 
             <TextView
+                android:textColor="@color/text_black"
+                android:textSize="@dimen/text_small"
                 app:layout_constraintTop_toBottomOf="@id/tvNewsTitle"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -61,24 +90,30 @@
                 android:layout_height="wrap_content"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--        <ScrollView-->
-<!--            android:background="@color/grey_tint"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0dp"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/headerContainer"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent">-->
-            <TextView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/headerContainer"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/tvContent"
-                android:text="@string/long_text"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"/>
-<!--        </ScrollView>-->
+        <ScrollView
+            android:id="@+id/scrollContent"
+            android:background="@drawable/rounded_top"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/imageBottom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+                <TextView
+                    android:paddingStart="@dimen/text_medium"
+                    android:paddingEnd="@dimen/text_medium"
+                    android:textColor="@color/text_black"
+                    android:textSize="@dimen/text_medium"
+                    android:layout_marginTop="100dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/headerContainer"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:id="@+id/tvContent"
+                    android:text="@string/long_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+        </ScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
