--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_tint">#514E4E4E</color>
+    <color name="grey">#757373</color>
+    <color name="primary">#FF3A44</color>
+    <color name="secondary">#0080FF</color>
+    <color name="territory">#FFE600</color>
+    <color name="text_black">#192A3E</color>
+    <color name="transparent">#AEF5F5F5</color>
 </resources>
