--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,10 +6,14 @@
     app:startDestination="@+id/navigation_dashboard">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.eyepax.newsapp.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_favorite"
+        android:name="com.eyepax.newsapp.ui.favorite.FavoriteFragment"
+        android:label="@string/favorite"
+        tools:layout="@layout/fragment_favorite" >
+        <action
+            android:id="@+id/action_navigation_favorite_to_newsDetailFragment"
+            app:destination="@id/newsDetailFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -32,7 +36,7 @@
     <fragment
         android:id="@+id/newsDetailFragment"
         android:name="com.eyepax.newsapp.ui.detail.NewsDetailFragment"
-        android:label="fragment_news_detail"
+        android:label="@string/details"
         tools:layout="@layout/fragment_news_detail">
         <argument
             android:name="article"
@@ -41,7 +45,7 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.eyepax.newsapp.ui.search.SearchFragment"
-        android:label="fragment_search"
+        android:label="@string/search"
         tools:layout="@layout/fragment_search" >
         <action
             android:id="@+id/action_searchFragment_to_newsDetailFragment"
