--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -123,6 +123,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="@dimen/padding"
         android:layout_marginBottom="@dimen/padding"
+        android:tint="@color/white"
+        android:backgroundTint="@color/territory"
         android:src="@drawable/ic_favorite"
         android:id="@+id/fabFavorite"
         android:layout_width="wrap_content"
