--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tiUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/username"
+        android:hint="@string/lblUsername"
         android:background="@null"
         android:paddingTop="@dimen/padding"
         app:endIconMode="clear_text"
@@ -20,8 +20,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:maxLines="1"
             android:background="@drawable/rounded_filter_white"
-            android:text="senelsmash"
             android:id="@+id/etUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -42,8 +42,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tiUsername">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:maxLines="1"
             android:background="@drawable/rounded_filter_white"
-            android:text="senel"
             android:id="@+id/etFirstname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -64,8 +64,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tiFirstName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:maxLines="1"
             android:background="@drawable/rounded_filter_white"
-            android:text="perera"
             android:id="@+id/etLastname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -86,9 +86,9 @@
         app:layout_constraintTop_toBottomOf="@+id/tiLastname">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:maxLines="1"
             android:background="@drawable/rounded_filter_white"
-            android:text="abc123"
-            android:id="@+id/etPassword"
+            android:id="@+id/etPasswordReg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword" />
@@ -109,8 +109,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tiPassword">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:maxLines="1"
             android:background="@drawable/rounded_filter_white"
-            android:text="abc123"
             android:id="@+id/etRetypePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -132,11 +132,11 @@
         app:layout_constraintTop_toBottomOf="@+id/tiReTypePassword">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:background="@drawable/rounded_filter_white"
-            android:text="senelsmash@gmail.com"
+            android:maxLines="1"
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_filter_white"
             android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
